vm/y.output

state 0
	$accept: .start $end 
	stmt_list: .    (2)

	.  reduce 2 (src line 81)

	stmt_list  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  stmt_list.    (1)
	stmt_list:  stmt_list.stmt 
	hide_spec: .    (85)
	mark_pos: .    (103)

	$end  reduce 1 (src line 74)
	INVALID  shift 12
	CONST  shift 10
	HIDDEN  shift 22
	DEF  reduce 103 (src line 547)
	DEL  shift 11
	NEXT  shift 9
	OTHERWISE  shift 14
	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	DECO  reduce 103 (src line 547)
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	DIV  reduce 103 (src line 547)
	NOT  shift 38
	LPAREN  shift 34
	NL  shift 15
	.  reduce 85 (src line 442)

	stmt  goto 3
	conditional_statement  goto 4
	expression_statement  goto 5
	expr  goto 16
	primary_expr  goto 25
	multiplicative_expr  goto 42
	additive_expr  goto 39
	postfix_expr  goto 37
	unary_expr  goto 26
	assign_expr  goto 21
	rel_expr  goto 23
	shift_expr  goto 27
	bitwise_expr  goto 19
	logical_expr  goto 13
	indexed_expr  goto 29
	id_expr  goto 41
	concat_expr  goto 28
	pattern_expr  goto 24
	declaration  goto 6
	definition  goto 7
	decoration_statement  goto 8
	regex_pattern  goto 40
	match_expr  goto 20
	hide_spec  goto 17
	mark_pos  goto 18

state 3
	stmt_list:  stmt_list stmt.    (3)

	.  reduce 3 (src line 86)


state 4
	stmt:  conditional_statement.    (4)

	.  reduce 4 (src line 95)


state 5
	stmt:  expression_statement.    (5)

	.  reduce 5 (src line 98)


state 6
	stmt:  declaration.    (6)

	.  reduce 6 (src line 100)


state 7
	stmt:  definition.    (7)

	.  reduce 7 (src line 102)


state 8
	stmt:  decoration_statement.    (8)

	.  reduce 8 (src line 104)


state 9
	stmt:  NEXT.    (9)

	.  reduce 9 (src line 106)


state 10
	stmt:  CONST.id_expr concat_expr 

	ID  shift 43
	.  error

	id_expr  goto 44

state 11
	stmt:  DEL.postfix_expr 

	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	LPAREN  shift 34
	.  error

	primary_expr  goto 46
	postfix_expr  goto 45
	indexed_expr  goto 29
	id_expr  goto 41

state 12
	stmt:  INVALID.    (12)

	.  reduce 12 (src line 118)


state 13
	conditional_statement:  logical_expr.compound_statement ELSE compound_statement 
	conditional_statement:  logical_expr.compound_statement 
	assign_expr:  logical_expr.    (20)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 50
	OR  shift 51
	LCURLY  shift 49
	.  reduce 20 (src line 163)

	compound_statement  goto 47
	logical_op  goto 48

state 14
	conditional_statement:  OTHERWISE.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 52

state 15
	expression_statement:  NL.    (16)

	.  reduce 16 (src line 144)


state 16
	expression_statement:  expr.NL 

	NL  shift 53
	.  error


state 17
	declaration:  hide_spec.type_spec declarator 

	COUNTER  shift 55
	GAUGE  shift 56
	TIMER  shift 57
	TEXT  shift 58
	.  error

	type_spec  goto 54

state 18
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 
	definition:  mark_pos.DEF ID compound_statement 
	decoration_statement:  mark_pos.DECO compound_statement 

	DEF  shift 60
	DECO  shift 61
	DIV  shift 59
	.  error


state 19
	logical_expr:  bitwise_expr.    (23)
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 

	BITAND  shift 63
	XOR  shift 65
	BITOR  shift 64
	.  reduce 23 (src line 178)

	bitwise_op  goto 62

state 20
	logical_expr:  match_expr.    (24)

	.  reduce 24 (src line 181)


state 21
	expr:  assign_expr.    (19)

	.  reduce 19 (src line 158)


state 22
	hide_spec:  HIDDEN.    (86)

	.  reduce 86 (src line 447)


state 23
	bitwise_expr:  rel_expr.    (29)
	rel_expr:  rel_expr.rel_op opt_nl shift_expr 

	LT  shift 67
	GT  shift 68
	LE  shift 69
	GE  shift 70
	EQ  shift 71
	NE  shift 72
	.  reduce 29 (src line 200)

	rel_op  goto 66

state 24
	match_expr:  pattern_expr.    (48)

	.  reduce 48 (src line 267)


state 25
	match_expr:  primary_expr.match_op opt_nl pattern_expr 
	match_expr:  primary_expr.match_op opt_nl primary_expr 
	postfix_expr:  primary_expr.    (67)

	MATCH  shift 74
	NOT_MATCH  shift 75
	.  reduce 67 (src line 342)

	match_op  goto 73

state 26
	assign_expr:  unary_expr.ASSIGN opt_nl logical_expr 
	assign_expr:  unary_expr.ADD_ASSIGN opt_nl logical_expr 
	multiplicative_expr:  unary_expr.    (59)

	ADD_ASSIGN  shift 77
	ASSIGN  shift 76
	.  reduce 59 (src line 314)


state 27
	rel_expr:  shift_expr.    (34)
	shift_expr:  shift_expr.shift_op opt_nl additive_expr 

	SHL  shift 79
	SHR  shift 80
	.  reduce 34 (src line 218)

	shift_op  goto 78

state 28
	pattern_expr:  concat_expr.    (53)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 81
	.  reduce 53 (src line 287)


state 29
	primary_expr:  indexed_expr.    (69)
	indexed_expr:  indexed_expr.LSQUARE arg_expr_list RSQUARE 

	LSQUARE  shift 82
	.  reduce 69 (src line 351)


state 30
	primary_expr:  BUILTIN.LPAREN RPAREN 
	primary_expr:  BUILTIN.LPAREN arg_expr_list RPAREN 

	LPAREN  shift 83
	.  error


state 31
	primary_expr:  CAPREF.    (72)

	.  reduce 72 (src line 362)


state 32
	primary_expr:  CAPREF_NAMED.    (73)

	.  reduce 73 (src line 366)


state 33
	primary_expr:  STRING.    (74)

	.  reduce 74 (src line 370)


state 34
	primary_expr:  LPAREN.expr RPAREN 
	mark_pos: .    (103)

	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	NOT  shift 38
	LPAREN  shift 34
	.  reduce 103 (src line 547)

	expr  goto 84
	primary_expr  goto 25
	multiplicative_expr  goto 42
	additive_expr  goto 39
	postfix_expr  goto 37
	unary_expr  goto 26
	assign_expr  goto 21
	rel_expr  goto 23
	shift_expr  goto 27
	bitwise_expr  goto 19
	logical_expr  goto 85
	indexed_expr  goto 29
	id_expr  goto 41
	concat_expr  goto 28
	pattern_expr  goto 24
	regex_pattern  goto 40
	match_expr  goto 20
	mark_pos  goto 86

state 35
	primary_expr:  INTLITERAL.    (76)

	.  reduce 76 (src line 378)


state 36
	primary_expr:  FLOATLITERAL.    (77)

	.  reduce 77 (src line 382)


state 37
	unary_expr:  postfix_expr.    (65)
	postfix_expr:  postfix_expr.INC 

	INC  shift 87
	.  reduce 65 (src line 334)


state 38
	unary_expr:  NOT.unary_expr 

	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	NOT  shift 38
	LPAREN  shift 34
	.  error

	primary_expr  goto 46
	postfix_expr  goto 37
	unary_expr  goto 88
	indexed_expr  goto 29
	id_expr  goto 41

state 39
	shift_expr:  additive_expr.    (42)
	additive_expr:  additive_expr.add_op opt_nl multiplicative_expr 

	MINUS  shift 91
	PLUS  shift 90
	.  reduce 42 (src line 242)

	add_op  goto 89

state 40
	concat_expr:  regex_pattern.    (54)

	.  reduce 54 (src line 294)


state 41
	indexed_expr:  id_expr.    (78)

	.  reduce 78 (src line 388)


state 42
	additive_expr:  multiplicative_expr.    (46)
	multiplicative_expr:  multiplicative_expr.mul_op opt_nl unary_expr 

	DIV  shift 94
	MOD  shift 95
	MUL  shift 93
	POW  shift 96
	.  reduce 46 (src line 258)

	mul_op  goto 92

state 43
	id_expr:  ID.    (80)

	.  reduce 80 (src line 402)


state 44
	stmt:  CONST id_expr.concat_expr 
	mark_pos: .    (103)

	.  reduce 103 (src line 547)

	concat_expr  goto 97
	regex_pattern  goto 40
	mark_pos  goto 86

state 45
	stmt:  DEL postfix_expr.    (11)
	postfix_expr:  postfix_expr.INC 

	INC  shift 87
	.  reduce 11 (src line 114)


state 46
	postfix_expr:  primary_expr.    (67)

	.  reduce 67 (src line 342)


state 47
	conditional_statement:  logical_expr compound_statement.ELSE compound_statement 
	conditional_statement:  logical_expr compound_statement.    (14)

	ELSE  shift 98
	.  reduce 14 (src line 129)


state 48
	logical_expr:  logical_expr logical_op.opt_nl bitwise_expr 
	logical_expr:  logical_expr logical_op.opt_nl match_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 99

state 49
	compound_statement:  LCURLY.stmt_list RCURLY 
	stmt_list: .    (2)

	.  reduce 2 (src line 81)

	stmt_list  goto 101

state 50
	logical_op:  AND.    (27)

	.  reduce 27 (src line 193)


state 51
	logical_op:  OR.    (28)

	.  reduce 28 (src line 196)


state 52
	conditional_statement:  OTHERWISE compound_statement.    (15)

	.  reduce 15 (src line 137)


state 53
	expression_statement:  expr NL.    (17)

	.  reduce 17 (src line 147)


state 54
	declaration:  hide_spec type_spec.declarator 

	STRING  shift 104
	ID  shift 103
	.  error

	declarator  goto 102

state 55
	type_spec:  COUNTER.    (91)

	.  reduce 91 (src line 474)


state 56
	type_spec:  GAUGE.    (92)

	.  reduce 92 (src line 479)


state 57
	type_spec:  TIMER.    (93)

	.  reduce 93 (src line 483)


state 58
	type_spec:  TEXT.    (94)

	.  reduce 94 (src line 487)


state 59
	regex_pattern:  mark_pos DIV.in_regex REGEX DIV 
	in_regex: .    (104)

	.  reduce 104 (src line 557)

	in_regex  goto 105

state 60
	definition:  mark_pos DEF.ID compound_statement 

	ID  shift 106
	.  error


state 61
	decoration_statement:  mark_pos DECO.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 107

state 62
	bitwise_expr:  bitwise_expr bitwise_op.opt_nl rel_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 108

state 63
	bitwise_op:  BITAND.    (31)

	.  reduce 31 (src line 209)


state 64
	bitwise_op:  BITOR.    (32)

	.  reduce 32 (src line 212)


state 65
	bitwise_op:  XOR.    (33)

	.  reduce 33 (src line 214)


state 66
	rel_expr:  rel_expr rel_op.opt_nl shift_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 109

state 67
	rel_op:  LT.    (36)

	.  reduce 36 (src line 227)


state 68
	rel_op:  GT.    (37)

	.  reduce 37 (src line 230)


state 69
	rel_op:  LE.    (38)

	.  reduce 38 (src line 232)


state 70
	rel_op:  GE.    (39)

	.  reduce 39 (src line 234)


state 71
	rel_op:  EQ.    (40)

	.  reduce 40 (src line 236)


state 72
	rel_op:  NE.    (41)

	.  reduce 41 (src line 238)


state 73
	match_expr:  primary_expr match_op.opt_nl pattern_expr 
	match_expr:  primary_expr match_op.opt_nl primary_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 110

state 74
	match_op:  MATCH.    (51)

	.  reduce 51 (src line 280)


state 75
	match_op:  NOT_MATCH.    (52)

	.  reduce 52 (src line 283)


state 76
	assign_expr:  unary_expr ASSIGN.opt_nl logical_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 111

state 77
	assign_expr:  unary_expr ADD_ASSIGN.opt_nl logical_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 112

state 78
	shift_expr:  shift_expr shift_op.opt_nl additive_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 113

state 79
	shift_op:  SHL.    (44)

	.  reduce 44 (src line 251)


state 80
	shift_op:  SHR.    (45)

	.  reduce 45 (src line 254)


state 81
	concat_expr:  concat_expr PLUS.opt_nl regex_pattern 
	concat_expr:  concat_expr PLUS.opt_nl id_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 114

state 82
	indexed_expr:  indexed_expr LSQUARE.arg_expr_list RSQUARE 

	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	NOT  shift 38
	LPAREN  shift 34
	.  error

	arg_expr_list  goto 115
	primary_expr  goto 46
	multiplicative_expr  goto 42
	additive_expr  goto 39
	postfix_expr  goto 37
	unary_expr  goto 117
	rel_expr  goto 23
	shift_expr  goto 27
	bitwise_expr  goto 116
	indexed_expr  goto 29
	id_expr  goto 41

state 83
	primary_expr:  BUILTIN LPAREN.RPAREN 
	primary_expr:  BUILTIN LPAREN.arg_expr_list RPAREN 

	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	NOT  shift 38
	LPAREN  shift 34
	RPAREN  shift 118
	.  error

	arg_expr_list  goto 119
	primary_expr  goto 46
	multiplicative_expr  goto 42
	additive_expr  goto 39
	postfix_expr  goto 37
	unary_expr  goto 117
	rel_expr  goto 23
	shift_expr  goto 27
	bitwise_expr  goto 116
	indexed_expr  goto 29
	id_expr  goto 41

state 84
	primary_expr:  LPAREN expr.RPAREN 

	RPAREN  shift 120
	.  error


state 85
	assign_expr:  logical_expr.    (20)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 50
	OR  shift 51
	.  reduce 20 (src line 163)

	logical_op  goto 48

state 86
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 

	DIV  shift 59
	.  error


state 87
	postfix_expr:  postfix_expr INC.    (68)

	.  reduce 68 (src line 345)


state 88
	unary_expr:  NOT unary_expr.    (66)

	.  reduce 66 (src line 337)


state 89
	additive_expr:  additive_expr add_op.opt_nl multiplicative_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 121

state 90
	add_op:  PLUS.    (57)

	.  reduce 57 (src line 307)


state 91
	add_op:  MINUS.    (58)

	.  reduce 58 (src line 310)


state 92
	multiplicative_expr:  multiplicative_expr mul_op.opt_nl unary_expr 
	opt_nl: .    (105)

	NL  shift 100
	.  reduce 105 (src line 567)

	opt_nl  goto 122

state 93
	mul_op:  MUL.    (61)

	.  reduce 61 (src line 323)


state 94
	mul_op:  DIV.    (62)

	.  reduce 62 (src line 326)


state 95
	mul_op:  MOD.    (63)

	.  reduce 63 (src line 328)


state 96
	mul_op:  POW.    (64)

	.  reduce 64 (src line 330)


state 97
	stmt:  CONST id_expr concat_expr.    (10)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 81
	.  reduce 10 (src line 110)


state 98
	conditional_statement:  logical_expr compound_statement ELSE.compound_statement 

	LCURLY  shift 49
	.  error

	compound_statement  goto 123

state 99
	logical_expr:  logical_expr logical_op opt_nl.bitwise_expr 
	logical_expr:  logical_expr logical_op opt_nl.match_expr 
	mark_pos: .    (103)

	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	NOT  shift 38
	LPAREN  shift 34
	.  reduce 103 (src line 547)

	primary_expr  goto 25
	multiplicative_expr  goto 42
	additive_expr  goto 39
	postfix_expr  goto 37
	unary_expr  goto 117
	rel_expr  goto 23
	shift_expr  goto 27
	bitwise_expr  goto 124
	indexed_expr  goto 29
	id_expr  goto 41
	concat_expr  goto 28
	pattern_expr  goto 24
	regex_pattern  goto 40
	match_expr  goto 125
	mark_pos  goto 86

state 100
	opt_nl:  NL.    (106)

	.  reduce 106 (src line 569)


state 101
	stmt_list:  stmt_list.stmt 
	compound_statement:  LCURLY stmt_list.RCURLY 
	hide_spec: .    (85)
	mark_pos: .    (103)

	INVALID  shift 12
	CONST  shift 10
	HIDDEN  shift 22
	DEF  reduce 103 (src line 547)
	DEL  shift 11
	NEXT  shift 9
	OTHERWISE  shift 14
	BUILTIN  shift 30
	STRING  shift 33
	CAPREF  shift 31
	CAPREF_NAMED  shift 32
	ID  shift 43
	DECO  reduce 103 (src line 547)
	INTLITERAL  shift 35
	FLOATLITERAL  shift 36
	DIV  reduce 103 (src line 547)
	NOT  shift 38
	RCURLY  shift 126
	LPAREN  shift 34
	NL  shift 15
	.  reduce 85 (src line 442)

	stmt  goto 3
	conditional_statement  goto 4
	expression_statement  goto 5
	expr  goto 16
	primary_expr  goto 25
	multiplicative_expr  goto 42
	additive_expr  goto 39
	postfix_expr  goto 37
	unary_expr  goto 26
	assign_expr  goto 21
	rel_expr  goto 23
	shift_expr  goto 27
	bitwise_expr  goto 19
	logical_expr  goto 13
	indexed_expr  goto 29
	id_expr  goto 41
	concat_expr  goto 28
	pattern_expr  goto 24
	declaration  goto 6
	definition  goto 7
	decoration_statement  goto 8
	regex_pattern  goto 40
	match_expr  goto 20
	hide_spec  goto 17
	mark_pos  goto 18

state 102
	declaration:  hide_spec type_spec declarator.    (84)
	declarator:  declarator.by_spec 
	declarator:  declarator.as_spec 

	AS  shift 130
	BY  shift 129
	.  reduce 84 (src line 432)

	as_spec  goto 128
	by_spec  goto 127

state 103
	declarator:  ID.    (89)
